server/src/main/assets/stylesheets/main.less
/* ... */
.dashboard-summary__splits-graph-bar {
  width: 15px;
  margin: 1px;
  display: inline-block;
  background-color: rgba(140, 140, 145, 1);
}

.dashboard-summary__splits-graph-bar--eeadesk {
  background-color: rgb(0, 161, 222);
}

.dashboard-summary__splits-graph-bar--egate {
  background-color: rgb(145, 125, 84);
}

.dashboard-summary__splits-graph-bar--noneeadesk {
  background-color: rgb(247, 144, 30);
}

.dashboard-summary__splits-graph-bar--fasttrack {
  background-color: purple;
}

.arrivals-table {
  width: 100%
}

.arrivals__table__flight-code--clickable:hover {
  background-color: #CCCCCC;
  cursor: pointer;
}

.arrivals__table__flight-est-pcp {
  width: 110px;
}

.arrivals__table__flight__no-pcp-pax {
  text-decoration-line: line-through;
}

.arrivals__table__flight-code-value {
  min-width: 53px;
}

.arrivals__table__flight-code__info {
  font-size: inherit;
  float: right;
  margin-right: 2px;
}

.arrivals__table__flight__pcp-pax svg {
  font-size: inherit;
  color: red;
  margin-left: 5px;
}

.arrivals__table__flight__pcp-pax__incoming svg {
  transform: rotate(135deg);
}

.arrivals__table__flight__pcp-pax__outgoing svg {
  transform: rotate(320deg);
}

.arrivals__table__flight-code-wrapper {
  width: 75px;
  display: inline-block;
}

.arrivals__table__flight-code {
  white-space: nowrap;
  width: 95px;
}

.arrivals__table__flight__chart-box {
  min-width: 850px;
  @media (max-width: 800px) {
    min-width: 550px;
  };

  .arrivals__table__flight__chart-wrapper {
    display: grid;
    gap: 15px;
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }

  .arrivals__table__flight__chart-box__chart {
    width: 97%;
  }
}

.arrivals__table__flight__chart__show__nationalities_label {
  display: inline-block;
  margin-left: 2px;
  font-size: 12px;
  font-weight: normal;
  padding: 2px 10px 2px 1px;
}

.simulation__chart-box {
  width: 80%;
}

.arrivals__table__flight__chart-box-1 {
  min-width: 330px;

  .arrivals__table__flight__chart-box__chart {
    width: 99%;
  }
}

.arrivals__table__flight__chart-box__chart {
  border-right: #f3f2f1 1px solid;
  margin-left: 1%;
}

.pax-of-interest {
  width: 50px;
  line-height: 50px;
  border-radius: 50%;
  text-align: center;
  font-size: 32px;
  border: 2px solid #666;
}

.arrivals__table__flight__chart-box__chart:last-child {
  border-right: 0;
  margin-left: 0;
}

.arrivals__table__flight__chart-box__chart canvas {
  cursor: default;
}

#arrivals td.queue-split {
  padding: 0px;
}

.queue-split div {
  padding: 8px 20px 5px 10px;
  display: block;
}

.pcp-pax {
  border-right: 1px solid #ccc;
}

.pax-rag-green {
  border-bottom: 3px solid @reliability-high;
}

.pax-rag-amber {
  border-bottom: 3px solid @reliability-medium;
}

.pax-rag-red {
  border-bottom: 3px solid @reliability-low;
}

.pax-no-splits {
  border-bottom: 0px;
}

#arrivals td, #arrivals th {
  padding: 8px;
  line-height: 1.4;
  vertical-align: top;
  border-top: 1px solid #ddd;
}

#arrivals tbody:nth-child(odd) {
  background-color: #00bcd4;
}

#arrivals tbody:nth-child(odd) tr {
  background-color: #00bcd4;
}

#arrivals thead th.gate-stand, #arrivals thead th.status {
  width: 7%;
}

#arrivals thead th.pcp {
  width: 12%;
}

#arrivals thead th.country {
  width: 9%;
}

#arrivals table {
  table-layout: fixed;
}

#arrivals table thead {
  background-color: #335096;
  color: #fff;
}

div#arrivals {
  margin-top: 10px;
}

#arrivals tr.from-now {
  background-color: #D5E8F3;
}

#arrivals tr.from-now:nth-child(odd) {
  background-color: darken(#D5E8F3, 5%);
}

#terminal-summary-boxes {
  height: 160px;
}

body {
  font-size: 1.45rem
}

.port-config {
  display: flex;
  flexWrap: wrap;
}

.terminal-spinner {
  text-align: center;
  min-height: 200px;
  font-size: xxx-large;
  display: flex;
  align-items: center;
  justify-content: center;
}

.no-gutters {
  margin-right: 0;
  margin-left: 0;
  padding: inherit;

  > .col,
  > [class*="col-"] {
    padding-right: 0;
    padding-left: 0;
  }
}

.sticky-top {
  position: sticky;
  top: 0;
  z-index: 10;
}

.solid-background {
  background-color: #fff;
}

a i.fa.fa-remove {
  cursor: default;
}

.data-updates {
  float: left;
  display: block;
  width: 371px;
  margin: 5px;
  padding: 0px 0px 10px 15px;
  /*min-height: 80px;*/
  background-color: #CCFFCC;
}

.data-updates .data-summary {
  list-style-type: none;
  padding: 0px 10px;
}

.crunch-actions-container {
  display: flex;
  align-content: flex-start;
  flex-wrap: wrap;
  gap: 10px;
}

.feed-status-container {
  display: flex;
  align-content: flex-start;
  flex-wrap: wrap;
  gap: 10px;
}

.feed-status {
  width: 371px;
  margin: 5px;
  padding: 0px 15px;
  min-height: 400px;
}

.feed-status.green {
  background-color: #CCFFCC;
}

.feed-status.amber {
  background-color: #FFEBBD;
}

.feed-status.red {
  background-color: #FFCCCC;
}

.feed-status ul {
  list-style-type: none;
  padding: 0px 10px;
}

.feed-status ul.times-summary li {
  float: left;
  text-align: center;
  height: 80px;
}

.feed-status ul.times-summary li > div {
  height: 80px;
  background-color: #fff;
  margin: 5px;
  width: 97px;
}

.feed-status-description {
  height: 50px;
}

.clear {
  clear: both;
  margin-bottom: 24px;
}

.vert-align {
  display: table;
}

.vert-align > div {
  display: table-cell;
  vertical-align: middle;
}

.button-group {
  margin-top: 15px;
  margin-bottom: 15px;
}

.key-cloak-users td {
  padding: 10px;
}

.topbar {
  height: 70px;
  width: 96%;
  margin: auto;
  display: flex;
  gap: 25px;
}

.alerts {
  float: left;
  width: calc(~"100% - 220px");
}

.has-alerts {
  display: block;
  padding: 2px 0px;
  box-sizing: border-box;
  text-decoration: none;
  overflow: auto;
  flex-grow: 1;
}

.has-alerts > span > div > p {
  margin: 0px;
}

.grow {
  flex-grow: 1;
}

.alert-class-notice {
  background: #adf
}

.alert-class-warning {
  background: #faa
}
/* ... */

